    * made it possible to customize menus.
- refactored 403 (forbidden) handling and added support for custom 403 pages.
- syndication:
    * added support for RSS ping-notifications of http://technorati.com/.
- database backend:
    * added support for mutiple database connections.
    * refactored the categorization of news items.
- usability:
    * slightly reorganized navigation menus.


Drupal 4.4.1, 2004-04-01
------------------------

- fixed bugs: no critical bugs were identified.


Drupal 4.4.0, 2004-04-01
------------------------

- added support for the MetaWeblog API and MovableType extensions.
- added a file API: enables better document management.
- improved the watchdog and search module to log search keys.
- news aggregator:
    * added support for conditional GET.
    * added OPML feed subscription list.
    * added support for <image>, <pubDate>, <dc:date>, <dcterms:created>, <dcterms:issued> and <dcterms:modified>.
- comment module:
    * made it possible to disable the "comment viewing controls".
- performance:
    * improved module loading when serving cached pages.
    * made it possible to automatically disable modules when under heavy load.
    * made it possible to automatically disable blocks when under heavy load.
    * improved performance and memory footprint of the locale module.
- theme system:
    * made all theme functions start with 'theme_'.
    * made all theme functions return their output.
    * migrated away from using the BaseTheme class.
    * added many new theme functions and refactored existing theme functions.
    * added avatar support to 'Xtemplate'.
    * replaced theme 'UnConeD' by 'Chameleon'.
    * replaced theme 'Marvin' by 'Pushbutton'.
- usability:
    * added breadcrumb navigation to all pages.
    * made it possible to add context-sensitive help to all pages.
    * replaced drop-down menus by radio buttons where appropriate.
    * removed the 'magic_quotes_gpc = 0' requirement.