@@ -288,7 +288,7 @@ td.menu-disabled {
   border-collapse: collapse;
   width: 100%;
 }
-.calendar td {
+.calendar td, .calendar th {
   text-align: center;
   border: 1px solid #000;
   padding: 1px;
