@@ -332,15 +332,9 @@ table {
 .calendar a {
   text-decoration: none;
 }
-.calendar td {
-  padding: 0;
+.calendar td, .calendar th {
+  padding: 0.4em 0;
   border-color: #888;
-}
-.calendar td div {
-  padding: 0.4em 0;
-}
-.calendar .row-week td a {
-  padding: 0.4em 0;
 }
 .calendar .day-today {
   background-color: #69c;
@@ -351,9 +345,6 @@ table {
 .calendar .day-selected {
   background-color: #369;
   color: #fff;
-}
-.calendar .header-month {
-  background-color: #bbb;
 }
 .calendar .header-week {
   background-color: #ccc;
